# minicycle-webui

./: .gitignore  .podman-play  Cargo.toml  README.md  index.html
mock/: foo.json  log
src/: main.rs
src/schema/: v1.rs
static/scss/: root.scss
