[package]
name = "minicycle-webui"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/stratal-systems/minicycle-webui"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
leptos = { version = "0.8.9", features = ["csr"] }
log = "0.4"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "0.2"
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono-humanize = { version = "0.2.3", features = ["wasmbind"] }
chrono = "0.4.42"
